--- a/package.json
+++ b/package.json
@@ -10,12 +10,25 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "ant-design-vue": "^1.1.10",
+    "axios": "^0.18.0",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "numeral": "^2.0.6",
+    "qs": "^6.6.0",
     "register-service-worker": "^1.5.2",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "v-charts": "^1.19.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
+    "vue-i18n": "^8.4.0",
+    "vue-ls": "^3.2.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.1"
   },
   "devDependencies": {
     "@types/jest": "^23.1.4",
